@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-21T02:07:58Z",
+  "timestamp" : "2022-10-21T16:41:20Z",
   "count_outdated" : 837,
   "uniques_outdated" : 439,
-  "count" : 863,
-  "uniques" : 453,
+  "count" : 864,
+  "uniques" : 454,
   "clones" : [
     {
       "timestamp": "2022-10-08T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-10-20T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
