@@ -1,3 +1,11 @@
+2022-10-21T16:41:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3299039358 # 960
+* notice: last 14d: unq all: 2 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 439 837 / 453 863
+* notice: next accum: outdated-unq outdated-all / unq all: 439 837 / 454 864
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-21]
+
 2022-10-21T02:07:58Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3294280461 # 958
 * notice: last 14d: unq all: 2 26
